--- a/Autoflow/wwwroot/index.html
+++ b/Autoflow/wwwroot/index.html
@@ -53,7 +53,7 @@
         <th>Id</th>
         <th>Name</th>
         <th>Author</th>
-        <th>Language</th>
+        <th>Rating</th>
         <th>Price</th>
     </tr>
     </thead>
@@ -65,7 +65,7 @@
     <input type="number" id="bookId" placeholder="Id" required />
     <input type="text" id="bookName" placeholder="Name" required />
     <input type="text" id="bookAuthor" placeholder="Author" required />
-    <input type="text" id="bookLanguage" placeholder="Language" required />
+    <input type="text" id="bookRating" placeholder="Rating" required />
     <input type="number" step="0.01" id="bookPrice" placeholder="Price" required />
     <button type="submit">Add Book</button>
 </form>
@@ -87,14 +87,14 @@
         const id = parseInt(document.getElementById('bookId').value);
         const name = document.getElementById('bookName').value;
         const author = document.getElementById('bookAuthor').value;
-        const language = document.getElementById('bookLanguage').value;
+        const rating = document.getElementById('bookRating').value;
         const price = parseFloat(document.getElementById('bookPrice').value);
 
         const newBook = {
             id: id,
             name: name,
             author: author,
-            language: language,
+            rating: rating,
             price: price
         };
 
@@ -159,9 +159,9 @@
             authorCell.textContent = book.author;
             row.appendChild(authorCell);
 
-            const languageCell = document.createElement('td');
-            languageCell.textContent = book.language;
-            row.appendChild(languageCell);
+            const ratingCell = document.createElement('td');
+            ratingCell.textContent = book.rating;
+            row.appendChild(ratingCell);
 
             const priceCell = document.createElement('td');
             priceCell.textContent = book.price;
